test/Fail/Issue8206.err
Issue8206.agda:17.20-23: warning: -W[no]InvalidDataOrRecDefParameter
Ignoring misplaced type of parameter in a data definition

Issue8206.agda:18.14-15: error: [UnequalSorts]
Set₁ != Set
when checking that the solution Set of metavariable _A_11 has the
expected type Set
